--- a/personal/static/personal/css/topnav.css
+++ b/personal/static/personal/css/topnav.css
@@ -18,6 +18,24 @@ body{
   text-decoration: none;
   font-size: 17px;
 }
+
+.topnav input[type=text]{
+  border:0;
+  background: none;
+  display: block;
+  margin-top: 5px;
+  text-align: center;
+  border: 2px solid green;
+  padding: 8px 10px;
+  position: absolute;
+  right: 3%;
+  width: 10%;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+}
+
 .topnav a:hover {
   background-color: #ddd;
   color: black;
@@ -37,10 +55,13 @@ body{
   body{ margin-top: 60px}
   .topnav a {display: none;}
   .topnav a.active {display: block;}
-  .topnav-right a {display: none;}
+  .topnav input[type=text] {display: block; width: 110px; position: absolute; right: 15%}
   .topnav a.icon {
     float: right;
     display: block;
+    top: 0%;
+    right: 0%;
+    position: fixed;
   }
 }
 
@@ -51,13 +72,8 @@ body{
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .topnav.responsive a,.topnav input[type=text] {
     float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav-right.responsive a {
-    float: left;
     display: block;
     text-align: left;
   }
