--- a/personal/templates/personal/header.html
+++ b/personal/templates/personal/header.html
@@ -18,16 +18,12 @@
 	<a class="{{home}}" href="/"><i class="fa fa-fw fa-home fa-1x"></i> Home</a>
 	<a class="{{blog}}" href="/blog"><i class="fa fa-newspaper-o fa-1x"></i> Blog</a>
   <a class="{{contact}}" href="/contact"><i class="fa fa-fw fa-envelope fa-1x"></i> Contact</a>
-		<div class="topnav-right">
-			<a class="{{login}}" href="/accounts/login">Login <i class="fa fa-sign-in fa-1x"></i></a>
-			<a class="{{register}}" href="/accounts/register">Register <i class="fa fa-user-plus"></i></a>
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-				<i class="fa fa-bars"></i>
-			</a>
-		</div>
-</div>
-<div>
-
+	<a class="{{login}}" href="/accounts/login">Login <i class="fa fa-sign-in fa-1x"></i></a>
+	<a class="{{register}}" href="/accounts/register">Register <i class="fa fa-user-plus"></i></a>
+	<input type="text" placeholder="search">
+	<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+		<i class="fa fa-bars"></i>
+	</a>
 </div>
 {% if messages %}
    {% for message in messages %}
@@ -42,7 +38,7 @@
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
+  if (x.className === "topnav" || x.className==="topnav-right") {
     x.className += " responsive";
   } else {
     x.className = "topnav";
