--- a/personal/static/personal/css/topnav.css
+++ b/personal/static/personal/css/topnav.css
@@ -51,6 +51,13 @@ body{
   display: none;
 }
 
+.fa-search{
+  position: fixed;
+  color: white;
+  top: 4%;
+  right: 4%;
+}
+
 @media screen and (max-width: 600px) {
   body{ margin-top: 60px}
   .topnav a {display: none;}
@@ -72,9 +79,14 @@ body{
     right: 0;
     top: 0;
   }
-  .topnav.responsive a,.topnav input[type=text] {
+  .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
+  }
+  .topnav.responsive input[type=text] {
+    float: none;
+    display: block;
+    text-align: center;
   }
 }
