--- a/personal/templates/personal/header.html
+++ b/personal/templates/personal/header.html
@@ -20,7 +20,7 @@
   <a class="{{contact}}" href="/contact"><i class="fa fa-fw fa-envelope fa-1x"></i> Contact</a>
 	<a class="{{login}}" href="/accounts/login">Login <i class="fa fa-sign-in fa-1x"></i></a>
 	<a class="{{register}}" href="/accounts/register">Register <i class="fa fa-user-plus"></i></a>
-	<input type="text" placeholder="search">
+	<input type="text" placeholder="search"><button><i class="fa fa-search fa-1x"></i></button>
 	<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 		<i class="fa fa-bars"></i>
 	</a>
@@ -38,7 +38,7 @@
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
-  if (x.className === "topnav" || x.className==="topnav-right") {
+  if (x.className === "topnav") {
     x.className += " responsive";
   } else {
     x.className = "topnav";
