--- a/personal/static/personal/css/topnav.css
+++ b/personal/static/personal/css/topnav.css
@@ -26,9 +26,9 @@ body{
   margin-top: 5px;
   text-align: center;
   border: 2px solid green;
-  padding: 8px 10px;
+  padding: 8px 3px;
   position: absolute;
-  right: 3%;
+  right: 20%;
   width: 10%;
   outline: none;
   color: white;
@@ -54,39 +54,51 @@ body{
 .fa-search{
   position: fixed;
   color: white;
-  top: 4%;
-  right: 4%;
+  border-radius: 25px;
+  top: 3%;
+  right: 18%;
 }
 
 @media screen and (max-width: 600px) {
   body{ margin-top: 60px}
   .topnav a {display: none;}
   .topnav a.active {display: block;}
-  .topnav input[type=text] {display: block; width: 110px; position: absolute; right: 15%}
-  .topnav a.icon {
-    float: right;
+  .topnav input[type=text] {
     display: block;
-    top: 0%;
-    right: 0%;
-    position: fixed;
+    width: 110px;
+    position: absolute;
+    right: 9%
+  }
+  .topnav a.icon {
+    float: left;
+    display: block;
   }
 }
 
 @media screen and (max-width: 600px) {
   .topnav.responsive { position: fixed;}
   .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+  float: left;
   }
+  .topnav-right
+{
+  float: left;
+}
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
-  .topnav.responsive input[type=text] {
-    float: none;
-    display: block;
-    text-align: center;
+  .topnav.responsive input[type=text]{
+    border: 2px solid white;
+    color: black;
+    background-color: white;
+    position: fixed;
+    right: 9%;
+    top: 0%;
+  }
+  .fa-search{
+    position: fixed;
+    right: 2.5%;
   }
 }
