--- a/personal/static/personal/css/topnav.css
+++ b/personal/static/personal/css/topnav.css
@@ -21,17 +21,17 @@ body{
 
 .topnav input[type=text]{
   border:0;
-  background: none;
+  background-color: white;
   display: block;
   margin-top: 5px;
   text-align: center;
-  border: 2px solid green;
+  border: 2px solid grey;
   padding: 8px 3px;
   position: absolute;
-  right: 20%;
-  width: 10%;
+  right: 250px;
+  width: 15%;
   outline: none;
-  color: white;
+  color: black;
   border-radius: 24px;
   transition: 0.25s;
 }
@@ -52,11 +52,12 @@ body{
 }
 
 .fa-search{
+  font-size: 25px;
   position: fixed;
   color: white;
   border-radius: 25px;
-  top: 3%;
-  right: 18%;
+  top: 15px;
+  right: 220px;
 }
 
 @media screen and (max-width: 600px) {
@@ -81,13 +82,17 @@ body{
   float: left;
   }
   .topnav-right
-{
-  float: left;
-}
+  {
+    float: left;
+  }
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
+    text-align:justify;
+  }
+  .topnav.responsive a.active{
+    position: static;
+    left: 0%;
   }
   .topnav.responsive input[type=text]{
     border: 2px solid white;
@@ -98,7 +103,8 @@ body{
     top: 0%;
   }
   .fa-search{
+    font-size: 25px;
     position: fixed;
-    right: 2.5%;
+    top: 1.9%;
+    right: 1.7%;
   }
-}
