--- a/personal/static/personal/css/topnav.css
+++ b/personal/static/personal/css/topnav.css
@@ -19,23 +19,56 @@ body{
   font-size: 17px;
 }
 
-.topnav input[type=text]{
-  border:0;
-  background-color: white;
-  display: block;
-  margin-top: 5px;
-  text-align: center;
-  border: 2px solid grey;
-  padding: 8px 3px;
+.search-box{
+  border-radius: 25px;
   position: absolute;
-  right: 250px;
-  width: 15%;
-  outline: none;
-  color: black;
-  border-radius: 24px;
-  transition: 0.25s;
+  height: 50px;
+  padding: 5px;
+  top: 1%;
+  right: 210px;
 }
+.search-box:hover{
+  background: white;
+  position: absolute;
+  right: 200px;
+}
+.search-box:hover > .search-txt{
+  width: 150px;
+  color: black;
+}
+.search-box:hover > .search-btn{
+  background: white;
+  color: black;
+}
+.search-txt{
+  border: none;
+  outline: none;
+  background: none;
+  float: left;
+  font-size: 16px;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: 40px;
+  width: 0px;
+  color: white;
 
+}
+.search-btn{
+  border-radius: 24px;
+  float: right;
+  width: 40px;
+  height: 40px;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.search-btn > i{
+  font-size: 20px;
+}
 .topnav a:hover {
   background-color: #ddd;
   color: black;
@@ -50,26 +83,33 @@ body{
 .topnav .icon {
   display: none;
 }
-
-.fa-search{
-  font-size: 25px;
-  position: fixed;
-  color: white;
-  border-radius: 25px;
-  top: 15px;
-  right: 220px;
+@media screen and (max-width: 600px){
+  .search-box{
+    position: fixed;
+    top: 0;
+    right:0px;
+  }
+  .search-box > .search-btn{
+    color: white;
+    display: flex;
+  }
+  .search-box > .search-btn > i{
+    font-size: 25px;
+  }
+  .search-box:hover{
+    position: fixed;
+    top: 0.35%;
+    right:0px;
+  }
+  .search-box:hover > .search-txt{
+    width: 90px;
+    padding-top: 5px;
+    line-height: 30px;
+  }
 }
-
 @media screen and (max-width: 600px) {
-  body{ margin-top: 60px}
   .topnav a {display: none;}
   .topnav a.active {display: block;}
-  .topnav input[type=text] {
-    display: block;
-    width: 110px;
-    position: absolute;
-    right: 9%
-  }
   .topnav a.icon {
     float: left;
     display: block;
@@ -82,29 +122,12 @@ body{
   float: left;
   }
   .topnav-right
-  {
-    float: left;
-  }
+{
+  float: left;
+}
   .topnav.responsive a {
     float: none;
     display: block;
     text-align:justify;
   }
-  .topnav.responsive a.active{
-    position: static;
-    left: 0%;
-  }
-  .topnav.responsive input[type=text]{
-    border: 2px solid white;
-    color: black;
-    background-color: white;
-    position: fixed;
-    right: 9%;
-    top: 0%;
-  }
-  .fa-search{
-    font-size: 25px;
-    position: fixed;
-    top: 1.9%;
-    right: 1.7%;
-  }
+}
