--- a/personal/static/personal/css/topnav.css
+++ b/personal/static/personal/css/topnav.css
@@ -27,19 +27,7 @@ body{
   top: 1%;
   right: 210px;
 }
-.search-box:hover{
-  background: white;
-  position: absolute;
-  right: 200px;
-}
-.search-box:hover > .search-txt{
-  width: 150px;
-  color: black;
-}
-.search-box:hover > .search-btn{
-  background: white;
-  color: black;
-}
+
 .search-txt{
   border: none;
   outline: none;
@@ -69,10 +57,7 @@ body{
 .search-btn > i{
   font-size: 20px;
 }
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+
 .topnav a.active {
   background-color: #4CAF50;
   color: white;
@@ -83,30 +68,84 @@ body{
 .topnav .icon {
   display: none;
 }
+.content{
+  border-radius: 20px;
+  width: 20%;
+  position: absolute;
+  top: 20%;
+  left: 10%;
+}
+
+.online-shopping{
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  filter: blur(0.6px);
+}
+.centered{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #FAFAFA;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+@media not all and (pointer: coarse){
+  .content:hover{
+    width: 400px;
+    height: auto;
+  }
+  .content:hover > .online-shopping{
+    width: 400px;
+    height: auto;
+  }
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  .search-box:hover{
+    background: white;
+    position: absolute;
+    right: 200px;
+  }
+  .search-box:hover > .search-txt{
+    width: 150px;
+    color: black;
+  }
+  .search-box:hover > .search-btn{
+    background: white;
+    color: black;
+  }
+}
 @media screen and (max-width: 600px){
   .search-box{
     position: fixed;
-    top: 0;
-    right:0px;
+    top: 2px;
+    right:0;
+    background: white;
+  }
+  .search-box > .search-txt{
+    width: 90px;
+    padding-top: 5px;
+    line-height: 30px;
+    color: black;
   }
   .search-box > .search-btn{
-    color: white;
+    color: black;
     display: flex;
   }
   .search-box > .search-btn > i{
     font-size: 25px;
   }
-  .search-box:hover{
-    position: fixed;
-    top: 0.35%;
-    right:0px;
-  }
-  .search-box:hover > .search-txt{
-    width: 90px;
-    padding-top: 5px;
-    line-height: 30px;
-  }
+
+
 }
+
 @media screen and (max-width: 600px) {
   .topnav a {display: none;}
   .topnav a.active {display: block;}
@@ -129,5 +168,41 @@ body{
     float: none;
     display: block;
     text-align:justify;
+  }
+  .topnav.responsive > .search-box {
+    position: fixed;
+    top: 2px;
+    right:0px;
+  }
+  .topnav.responsive > .search-box > .search-txt{
+    width: 90px;
+    padding-top: 5px;
+    line-height: 30px;
+    color: black;
+  }
+  .topnav.responsive > .search-box > .search-btn{
+    color: black;
+    display: flex;
+  }
+  .topnav.responsive > .search-box > .search-btn > i{
+    font-size: 25px;
+  }
+}
+@media screen and (max-width: 600px){
+  .content{
+    width: 100%;
+    max-width: 600px;
+    height:auto;
+    position:relative;
+    left: 0;
+    border-radius: 0px;
+    border: 1px;
+  }
+  .online-shopping{
+    border-radius: 0px;
+    border: 1px;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
   }
 }
