--- a/personal/static/personal/css/topnav1.css
+++ b/personal/static/personal/css/topnav1.css
@@ -1,5 +1,5 @@
 body{
-  margin-top: 150px;
+  margin-top: 120px;
 }
 
 .header{
@@ -26,10 +26,6 @@ body{
   text-decoration: none;
   font-size: 17px;
 }
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
 .topnav a.active {
   background-color: #4CAF50;
   color: white;
@@ -40,7 +36,45 @@ body{
 .topnav .icon {
   display: none;
 }
-
+.content{
+  border-radius: 20px;
+  width: 20%;
+  position: relative;
+  left: 10%;
+}
+.online-shopping{
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  filter: blur(0.6px);
+}
+.centered{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #FAFAFA;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+@media not all and (pointer: coarse){
+  .content:hover{
+    width: 400px;
+    height: auto;
+  }
+  .content:hover > .online-shopping{
+    width: 400px;
+    height: auto;
+  }
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+}
 @media screen and (max-width: 600px) {
   .topnav a {display: none;}
   .topnav a.active {display: block;}
@@ -69,5 +103,33 @@ body{
     float: left;
     display: block;
     text-align: left;
+  }
+}
+@media screen and (max-width: 600px){
+  .content{
+    width: 100%;
+    max-width: 600px;
+    height:auto;
+    position:relative;
+    left: 0;
+    border-radius: 0px;
+    border: 1px;
+  }
+  .online-shopping{
+    border-radius: 0px;
+    border: 1px;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+  }
+}
+@media screen and (orientation:landscape) and (min-width:600px) and (hover:none) {
+  .content{
+    width: 30%;
+    position: relative;
+    left: 4%;
+  }
+  .centered{
+    font-size: 20px;
   }
 }
