--- a/personal/templates/personal/header.html
+++ b/personal/templates/personal/header.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="{% static 'personal/css/bootstrap.min.css' %}" type = "text/css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{% static 'personal/css/topnav.css' %}" type = "text/css"/>
+<link rel="stylesheet" href="{% static 'personal/css/content.css' %}" type = "text/css"/>
 <link rel="stylesheet" href="{% static 'personal/css/style1.css' %}" type = "text/css"/>
 <style>
 
