--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -1,8 +1,12 @@
 {% extends "personal/header.html" %}
 {% load staticfiles %}
 {% block content %}
-<div class="content" onclick="window.location='/accounts/profile';">
-  <img class="online-shopping" src="{% static 'personal/img/online shopping.jpeg' %}">
+<div class="content" onclick="window.location='/vebsites/online-shopping';">
+  <img class="content-img" src="{% static 'personal/img/online shopping.jpeg' %}">
   <p class="centered">Online Shopping</p>
+  </div>
+<div class="content2">
+  <img class="content-img" src="{% static 'personal/img/entertainment.jpg' %}">
+  <p class="centered">Entertainment</p>
   </div>
 {% endblock %}
