--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,8 +1,30 @@
 {% extends "personal/header_accounts.html" %}
 {% load staticfiles %}
 {% block content %}
-<div class="content" onclick="window.location='/vebsites/online-shopping';">
-  <img class="online-shopping" src="{% static 'personal/img/online shopping.jpeg' %}">
-  <p class="centered">Online Shopping</p>
+<div class="content">
+  <div class="col" onclick="window.location='/vebsites/online-shopping';">
+    <img class="content-img" src="{% static 'personal/img/online shopping.jpeg' %}">
+    <span>Online Shopping</span>
+    </div>
+  <div class="col" onclick="window.location='/vebsites/entertainment';">
+    <img class="content-img" src="{% static 'personal/img/entertainment.jpg' %}">
+    <span>Entertainment</span>
   </div>
+  <div class="col" onclick="window.location='/vebsites/online-shopping';">
+    <img class="content-img" src="{% static 'personal/img/online shopping.jpeg' %}">
+    <span>Online Shopping</span>
+    </div>
+  <div class="col" onclick="window.location='/vebsites/entertainment';">
+    <img class="content-img" src="{% static 'personal/img/entertainment.jpg' %}">
+    <span>Entertainment</span>
+  </div>
+  <div class="col" onclick="window.location='/vebsites/online-shopping';">
+    <img class="content-img" src="{% static 'personal/img/online shopping.jpeg' %}">
+    <span>Online Shopping</span>
+    </div>
+  <div class="col" onclick="window.location='/vebsites/entertainment';">
+    <img class="content-img" src="{% static 'personal/img/entertainment.jpg' %}">
+    <span>Entertainment</span>
+  </div>
+</div>
 {% endblock %}
