--- a/personal/static/personal/css/content.css
+++ b/personal/static/personal/css/content.css
@@ -1,72 +1,79 @@
-.content{
-  border-radius: 20px;
-  width: 20%;
-  position: absolute;
-  top: 20%;
-  left: 10%;
+html, body {
+   height: 95%;
+   width: 100%;
 }
-.content2{
+* {
+  box-sizing: border-box;
+}
+.content{
+  position: relative;
+  top: 1%;
+  left: 1%;
+  width: 96%;
+  height: 50%;
+  display: grid;
+  grid-template-columns:repeat(3,1fr);
+  grid-column-gap: .5em;
+  grid-auto-rows: minmax(250px,auto);
+  justify-items:center;
+  align-items: center;
+}
+.content > div{
   border-radius: 20px;
-  width: 20%;
-  position: absolute;
-  top: 20%;
-  left: 40%;
+  width: 90%;
+  height: 90%;
+  padding: 5%;
 }
 .content-img{
   border: none;
   outline: none;
   border-radius: 20px;
   width: 100%;
-  max-width: 400px;
+  max-width: 400%;
   height: 100%;
-  filter: blur(0.6px);
+  filter: blur(.7px);
 }
-.centered{
+span{
   position: absolute;
   top: 50%;
   left: 50%;
   color: #FAFAFA;
-  font-size: 150%;
+  font-size: 2.4vw;
   font-weight: bold;
   text-align: center;
   transform: translate(-50%, -50%);
 }
-@media not all and (pointer: coarse){
-  .content:hover,.content2:hover{
-    width: 27%;
-    height: auto;
+@media not all and (pointer: coarse) and (min-width: 1000px){
+  .content > div:hover{
+    width: 100%;
+    height: 100%;
+  }
+  .content > div:hover > .content-img{
+    filter: blur(2px);
   }
 }
 @media screen and (max-width: 600px){
-  .content,.content2{
-    width: 100%;
-    max-width: 600px;
-    height:auto;
-    position:relative;
+  .content{
+    position: relative;
     left: 0;
-    border-radius: 0px;
-    border: 1px;
+    width: 100%;
+    display: grid;
+    grid-template-columns:100%;
+    grid-row-gap: 0;
+    padding: 0;
+  }
+  .content > div{
+    width: 100%;
+    padding: 0;
+  }
+  span{
+    font-size: 10vw;
   }
   .content-img{
     border-radius: 0px;
-    border: 1px;
-    width: 100%;
-    height: auto;
   }
 }
 @media screen and (orientation:landscape) and (min-width:600px) and (hover:none){
-  .content{
-    width: 30%;
-    position: relative;
-    left: 4%;
-  }
-  .content2{
-    width: 30%;
-    position: absolute;
-    top:55px;
-    left: 40%;
-  }
-  .centered{
-    font-size: 15px;
-  }
+
+
 }
