--- a/personal/templates/personal/header.html
+++ b/personal/templates/personal/header.html
@@ -3,6 +3,7 @@
 <head>
 	<title>{{ title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="height=device-height, initial-scale=1">
 {% load staticfiles %}
 <link rel="stylesheet" href="{% static 'personal/css/bootstrap.min.css' %}" type = "text/css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,7 +31,6 @@
 			</a>
 		</div>
 </div>
-
 </div>
 {% if messages %}
    {% for message in messages %}
