--- a/personal/static/personal/css/style1.css
+++ b/personal/static/personal/css/style1.css
@@ -4,7 +4,7 @@
   padding: 5%;
   position:static;
   right: 70%;
-  background: white;
+  background: inherit;
   transform: translate(50%,-10%);
 
   text-align: center;
