--- a/personal/static/personal/css/topnav.css
+++ b/personal/static/personal/css/topnav.css
@@ -25,7 +25,7 @@ body{
   height: 50px;
   padding: 5px;
   top: 1%;
-  right: 16%;
+  right: 215px;
 }
 
 .search-txt{
@@ -76,7 +76,7 @@ body{
   .search-box:hover{
     background: white;
     position: absolute;
-    right: 16vw;
+    right: 215px;
   }
   .search-box:hover > .search-txt{
     width: 15vw;
