--- a/personal/static/personal/css/style1.css
+++ b/personal/static/personal/css/style1.css
@@ -22,7 +22,7 @@
   text-align: center;
   border: 2px solid #3498db;
   padding: 14px 10px;
-  width: 40%;
+  width: 19vw;
   outline: none;
   color: black;
   border-radius: 24px;
