--- a/personal/templates/personal/header.html
+++ b/personal/templates/personal/header.html
@@ -19,7 +19,7 @@
 <div class="topnav" id="myTopnav">
 	<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 		<i class="fa fa-bars"></i></a>
-	<a class="" href="/"> Vebsites</a>
+	<a class="vebsites" href="/"> Vebsites</a>
   <a class="{{contact}}" href="/contact"><i class="fa fa-fw fa-envelope fa-1x"></i> Contact us</a>
 	<div class="topnav-right">
 	<a class="{{login}}" href="/accounts/login">Login <i class="fa fa-sign-in fa-1x"></i></a>
