--- a/vebsites/templates/vebsites/includes/content.html
+++ b/vebsites/templates/vebsites/includes/content.html
@@ -2,27 +2,27 @@
 {% load staticfiles %}
 <div class="content">
   <div class="col" onclick="window.location='/vebsites/online-shopping';">
-    <img class="content-img" src="{% static 'personal/img/onlineshopping.jpg' %}">
+    <img class="content-img" src="{% static 'vebsites/img/onlineshopping.jpg' %}">
     <span class="onlineshopping">ONLINE SHOPPING</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/entertainment';">
-    <img class="content-img" src="{% static 'personal/img/entertainment.jpg' %}">
+    <img class="content-img" src="{% static 'vebsites/img/entertainment.jpg' %}">
     <span>ENTERTAINMENT</span>
   </div>
   <div class="col" onclick="window.location='/vebsites/news';">
-    <img class="content-img" src="{% static 'personal/img/news.png' %}">
+    <img class="content-img" src="{% static 'vebsites/img/news.png' %}">
     <span class="news">NEWS</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/sports';">
-    <img class="content-img" src="{% static 'personal/img/sports.jpg' %}">
+    <img class="content-img" src="{% static 'vebsites/img/sports.jpg' %}">
     <span class="sports">SPORTS</span>
   </div>
   <div class="col" onclick="window.location='/vebsites/education';">
-    <img class="content-img" src="{% static 'personal/img/education.jpg' %}">
+    <img class="content-img" src="{% static 'vebsites/img/education.jpg' %}">
     <span>Education</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/business';">
-    <img class="content-img" src="{% static 'personal/img/business.jpg' %}">
+    <img class="content-img" src="{% static 'vebsites/img/business.jpg' %}">
     <span class="business">Business</span>
   </div>
 </div>
