--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -10,6 +10,7 @@
     {{ form.last_name }}<br><br>
     {{ form.email.label }} :
     {{ form.email }}<br><br>
+    {{ form1.as_p }}
   <center> <button type="submit">Update</button> </center>
 </form>
 </div>
