--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,14 +1,10 @@
 {% extends "personal/header.html" %}
 {% block content %}
-  <form class='box' method="post"><br><br>
+  <form method="post"><br><br>
     <h2>Account Registration</h2>
     {% csrf_token %}
-    <input type="text" name="username" placeholder="Username" value="{{ username }}" required>
-    <input type="text" name="first_name" placeholder="First name" value="{{ first_name }}" required>
-    <input type="text" name="last_name" placeholder="Last name" value="{{ last_name }}">
-    <input type="email" name="email" placeholder="Email-ID" value="{{ email }}" required>
-    <input type="password" name="password1" placeholder="Password" required>
-    <input type="password" name="password2" placeholder="Re-enter Password" required>
-    <input type="submit" value="Register">
+    {{ form.as_p }}
+    {{ form.media }}
+    <center><button type="submit">Register</button></center>
   </form>
 {% endblock %}
