--- a/vebsites/templates/vebsites/includes/content.html
+++ b/vebsites/templates/vebsites/includes/content.html
@@ -1,5 +1,6 @@
 {% block content %}
 {% load staticfiles %}
+<link rel="stylesheet" href="{% static 'vebsites/css/content.css' %}" type = "text/css"/>
 <div class="content">
   <div class="col" onclick="window.location='{% url 'onlineshopping:home' %}';">
     <img class="content-img" src="{% static 'vebsites/img/onlineshopping.jpg' %}">
