--- a/onlineshopping/templates/onlineshopping/onlineshopping.html
+++ b/onlineshopping/templates/onlineshopping/onlineshopping.html
@@ -5,35 +5,35 @@
 <div class="content">
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/electronics.jpg' %}">
-    <span class="electronics">ELECTRONICS</span>
+    <span class="centered">ELECTRONICS</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/fashion.png' %}">
-    <span class="fashion">FASHION</span>
+    <span class="centered">FASHION</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/homeappliances.jpg' %}">
-    <span class="homeappliances">HOME APPLIANCES</span>
+    <span class="centered">HOME APPLIANCES</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/babycare.jpg' %}">
-    <span class="babycare">BABY CARE</span>
+    <span class="centered">BABY CARE</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/books.jpg' %}">
-    <span class="books">BOOKS</span>
+    <span class="centered">BOOKS</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/jewellery.jpg' %}">
-    <span class="jewellery">JEWELLERY</span>
+    <span class="centered">JEWELLERY</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/gifts.jpg' %}">
-    <span class="gifts">GIFTS</span>
+    <span class="centered">GIFTS</span>
     </div>
   <div class="col" onclick="window.location='/vebsites/online-shopping/';">
     <img class="content-img" src="{% static 'onlineshopping/img/foods.jpg' %}">
-    <span class="foods">FOODS AND BEVERAGES</span>
+    <span class="centered">FOODS AND BEVERAGES</span>
     </div>
 </div>
 {% endblock %}
