--- a/personal/static/personal/css/style1.css
+++ b/personal/static/personal/css/style1.css
@@ -1,18 +1,23 @@
 .box{
-  max-width: 50%;
-  max-height: 50%;
+  width: auto;
+  height: auto;
   padding: 5%;
-  position:static;
-  right: 70%;
+  position: relative;
+  left: 0%;
+  top: -6%;
   background: inherit;
-  transform: translate(50%,-10%);
-
   text-align: center;
+}
+#RegForm{
+  position: absolute;
+  top: -5%;
+  left: 25%;
 }
 .box h1{
   color: black;
   text-transform: uppercase;
   font-weight: 500;
+  text-align: center;
 }
 .box input[type = "text"],.box input[type = "password"],.box input[type = "email"]{
   border:0;
@@ -29,11 +34,11 @@
   transition: 0.25s;
 }
 .box input[type = "text"]:focus,.box input[type = "password"]:focus,.box input[type = "email"]:focus{
-  width: 60%;
+  width: 23vw;
   color: black;
   border-color: #2ecc71;
 }
-.box input[type = "submit"]{
+.box input[type = "submit"],button{
   border:0;
   background: none;
   display: block;
@@ -47,12 +52,19 @@
   transition: 0.25s;
   cursor: pointer;
 }
-.box input[type = "submit"]:hover{
+.box input[type = "submit"]:hover,button:hover{
   background: #2ecc71;
 }
 
 @media screen and (max-width: 600px){
-    .box{top: 10%;}
+    .box{width: 90%}
+    .box h1{
+      font-size: 5vw;
+    }
+    #RegForm{
+      position: relative;
+      top: -8%;
+    }
     .box input[type = "text"],.box input[type = "password"],.box input[type = "email"]{ width: 140px;}
     .box input[type = "text"]:focus,.box input[type = "password"]:focus,.box input[type = "email"]:focus{
       width: 170px;
