--- a/personal/templates/personal/header.html
+++ b/personal/templates/personal/header.html
@@ -11,9 +11,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="height=device-height, initial-scale=1">
 {% load staticfiles %}
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 <link rel="stylesheet" href="{% static 'personal/css/bootstrap.min.css' %}" type = "text/css"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<script type="text/javascript" src="{% static 'personal/js/bootstrap.min.js' %}"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{% static 'personal/css/topnav.css' %}" type = "text/css"/>
+{% block js %}
+{% endblock %}
 </head>
 <body>
 <div class="topnav" id="myTopnav">
@@ -41,7 +46,6 @@
 {% endif %}
 {% block content %}
 {% endblock %}
-
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
