--- a/vebsites/static/vebsites/css/content.css
+++ b/vebsites/static/vebsites/css/content.css
@@ -1,11 +1,3 @@
-html, body {
-   height: 95%;
-   width: 100%;
-   background: rgba(197, 239, 247, 1);
-}
-* {
-  box-sizing: border-box;
-}
 .content{
   position: relative;
   top: 1%;
@@ -34,7 +26,7 @@ html, body {
   height: 100%;
   filter: blur(2px);
 }
-span{
+.centered{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -70,7 +62,7 @@ span{
     width: 100%;
     padding: 0;
   }
-  span{
+  .centered{
     font-size: 10vw;
   }
   .content-img{
