--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,7 +9,7 @@
   </script>
 {% else %}
 <br><br>
-<div class="box">
+<div class="box" id="LoginForm">
 <form class="" method="post">
   {% csrf_token %}
   <h1>Login</h1>
