--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -10,7 +10,12 @@
     {{ form.last_name }}<br><br>
     {{ form.email.label }} :
     {{ form.email }}<br><br>
-    {{ form1.as_p }}
+    {{ form1.gender.label }} :
+    {{ form1.gender }}
+    {{ form1.birth_date.label }} :
+    {{ form1.birth_date }}<br><br>
+    {{ form1.location.label }} :
+    {{ form1.location }}
   <center> <button type="submit">Update</button> </center>
 </form>
 </div>
