--- a/vebsites/templates/vebsites/includes/content.html
+++ b/vebsites/templates/vebsites/includes/content.html
@@ -4,27 +4,27 @@
 <div class="content">
   <div class="col" onclick="window.location='{% url 'onlineshopping:home' %}';">
     <img class="content-img" src="{% static 'vebsites/img/onlineshopping.jpg' %}">
-    <span class="centered">ONLINE SHOPPING</span>
+    <span class="onlineshopping">ONLINE SHOPPING</span>
   </div>
   <div class="col" onclick="window.location='';">
     <img class="content-img" src="{% static 'vebsites/img/entertainment.jpg' %}">
-    <span class="centered">ENTERTAINMENT</span>
+    <span class="entertainment">ENTERTAINMENT</span>
   </div>
   <div class="col" onclick="window.location='';">
     <img class="content-img" src="{% static 'vebsites/img/news.png' %}">
-    <span class="centered">NEWS</span>
+    <span class="news">NEWS</span>
   </div>
   <div class="col" onclick="window.location='';">
     <img class="content-img" src="{% static 'vebsites/img/sports.jpg' %}">
-    <span class="centered">SPORTS</p>
+    <span class="sports">SPORTS</p>
   </div>
   <div class="col" onclick="window.location='';">
     <img class="content-img" src="{% static 'vebsites/img/education.jpg' %}">
-    <span class="centered">Education</span>
+    <span class="education">Education</span>
   </div>
   <div class="col" onclick="window.location='';">
     <img class="content-img" src="{% static 'vebsites/img/business.jpg' %}">
-    <span class="centered">Business</span>
+    <span class="business">Business</span>
   </div>
 </div>
 {% endblock %}
