--- a/vebsites/static/vebsites/css/content.css
+++ b/vebsites/static/vebsites/css/content.css
@@ -1,9 +1,9 @@
 .content{
   position: relative;
-  top: 1%;
+  top: 5%;
   left: 1%;
-  width: 96%;
-  height: 50%;
+  width: 95%;
+  height: 45%;
   display: grid;
   grid-template-columns:repeat(3,1fr);
   grid-column-gap: .5em;
@@ -13,8 +13,8 @@
 }
 .content > div{
   border-radius: 20px;
-  width: 90%;
-  height: 90%;
+  width: 80%;
+  height: 80%;
   padding: 5%;
 }
 .content-img{
@@ -26,7 +26,7 @@
   height: 100%;
   filter: blur(2px);
 }
-.centered{
+.content span{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -41,8 +41,8 @@
 }
 @media not all and (pointer: coarse) and (min-width: 1000px){
   .content > div:hover{
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
   }
   .content > div:hover > .content-img{
     filter: blur(0px);
